added getAll functions
