# api/controllers/db.js
@@ -14,7 +14,6 @@ var db_config = {
 
 global.db_connection = null;
 
-console.log("hello");
 
 function getConnection() {
 
@@ -61,6 +60,40 @@ function getAllMatchingPrices() {
     });
 }
 
+function getAllReserveAskPrices() {
+    return new Promise(function(resolve, reject) {
+        getConnection().then(function(connection) {
+            connection.query("select period,price from reservePrices where type = 'ASK'", function(err, rows, fields) {
+                if (err) {
+                    reject(err);
+                } else {
+                    console.log(2, rows);
+                    resolve(JSON.stringify(rows));
+                }
+            });
+        }, function(err) {
+            reject(err);
+        });
+    });
+}
+
+function getAllReserveBidPrices() {
+    return new Promise(function(resolve, reject) {
+        getConnection().then(function(connection) {
+            connection.query("select period,price from reservePrices where type = 'BID'", function(err, rows, fields) {
+                if (err) {
+                    reject(err);
+                } else {
+                    console.log(2, rows);
+                    resolve(JSON.stringify(rows));
+                }
+            });
+        }, function(err) {
+            reject(err);
+        });
+    });
+}
+
 
 function getMatchingPrice(_period) {
     return new Promise(function(resolve, reject) {
@@ -69,7 +102,9 @@ function getMatchingPrice(_period) {
                 if (err) {
                     reject(err);
                 } else {
-                    resolve(rows && rows.length === 1 ? true : false);
+
+                    console.log(typeof(rows[0].price).toString())
+                    resolve(rows[0].price.toString());
                 }
             });
         }, function(err) {
@@ -299,6 +334,7 @@ function hasUserOrderInPeriod(_addr, _period, _reserve, _type) {
 
 module.exports = {
     getAllMatchingPrices: getAllMatchingPrices,
+    getMatchingPrice: getMatchingPrice,
     getBidOrders: getBidOrders,
     getAskOrders: getAskOrders,
     insertMatchingPrices: insertMatchingPrices,
@@ -308,5 +344,7 @@ module.exports = {
     getReserveAskPrice: getReserveAskPrice,
     insertReservePrice: insertReservePrice,
     getReserveBidOrders: getReserveBidOrders,
-    getReserveAskOrders: getReserveAskOrders
+    getReserveAskOrders: getReserveAskOrders,
+    getAllReserveAskPrices: getAllReserveAskPrices,
+    getAllReserveBidPrices: getAllReserveBidPrices
 }
